--- a/Star/Base.lproj/Main.storyboard
+++ b/Star/Base.lproj/Main.storyboard
@@ -488,7 +488,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Ryz-Lc-iUN">
-                                <rect key="frame" x="0.0" y="88" width="375" height="636"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="724"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <connections>
                                     <outlet property="dataSource" destination="UCc-1Y-h8W" id="cmt-WT-CsA"/>
@@ -577,7 +577,7 @@
                             <constraint firstAttribute="bottom" secondItem="OwZ-dW-O0g" secondAttribute="bottom" id="P3E-a8-7DU"/>
                             <constraint firstAttribute="trailing" secondItem="OwZ-dW-O0g" secondAttribute="trailing" id="rM4-EG-lzZ"/>
                             <constraint firstItem="Ryz-Lc-iUN" firstAttribute="leading" secondItem="WrK-qh-jBL" secondAttribute="leading" id="rhG-po-2wZ"/>
-                            <constraint firstItem="Ryz-Lc-iUN" firstAttribute="top" secondItem="WrK-qh-jBL" secondAttribute="top" constant="88" id="ywu-I5-gdR"/>
+                            <constraint firstItem="Ryz-Lc-iUN" firstAttribute="top" secondItem="WrK-qh-jBL" secondAttribute="top" id="ywu-I5-gdR"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="文章详情" id="gxA-qg-Nnh"/>
