--- a/Star/Main/View/My/ImageTitleCell.xib
+++ b/Star/Main/View/My/ImageTitleCell.xib
@@ -26,24 +26,44 @@
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="我的资产" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Mvd-YG-mPK">
-                        <rect key="frame" x="55" y="22" width="271" height="20.5"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <nil key="textColor"/>
+                        <rect key="frame" x="55" y="22.5" width="65.5" height="19.5"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                        <color key="textColor" red="0.23921568627450979" green="0.23921568627450979" blue="0.23921568627450979" alpha="1" colorSpace="calibratedRGB"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="RCH-tb-sLw" userLabel="line">
+                        <rect key="frame" x="20" y="62.5" width="321" height="1"/>
+                        <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="1" id="y25-dU-Lmp"/>
+                        </constraints>
+                    </view>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6fc-ii-14b">
+                        <rect key="frame" x="326" y="33" width="0.0" height="0.0"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                        <color key="textColor" red="0.23921568630000001" green="0.23921568630000001" blue="0.23921568630000001" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
                 <constraints>
-                    <constraint firstAttribute="trailing" secondItem="Mvd-YG-mPK" secondAttribute="trailing" constant="15" id="Ipb-aC-i2G"/>
+                    <constraint firstItem="RCH-tb-sLw" firstAttribute="leading" secondItem="iFl-YP-Prl" secondAttribute="leading" constant="20" id="HSq-ju-pRI"/>
+                    <constraint firstAttribute="trailing" secondItem="RCH-tb-sLw" secondAttribute="trailing" id="HUB-4M-lQx"/>
                     <constraint firstItem="Mvd-YG-mPK" firstAttribute="centerY" secondItem="JBu-iO-SIf" secondAttribute="centerY" id="JxI-kU-Ais"/>
+                    <constraint firstAttribute="trailing" secondItem="6fc-ii-14b" secondAttribute="trailing" constant="15" id="Kzl-ZY-6Za"/>
                     <constraint firstItem="JBu-iO-SIf" firstAttribute="leading" secondItem="iFl-YP-Prl" secondAttribute="leading" constant="15" id="MEs-1t-CD6"/>
+                    <constraint firstAttribute="bottom" secondItem="RCH-tb-sLw" secondAttribute="bottom" id="OCF-bD-3JF"/>
                     <constraint firstItem="JBu-iO-SIf" firstAttribute="centerY" secondItem="iFl-YP-Prl" secondAttribute="centerY" id="cRc-IG-jY4"/>
+                    <constraint firstItem="6fc-ii-14b" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="Mvd-YG-mPK" secondAttribute="trailing" constant="10" id="cpA-wj-9zV"/>
                     <constraint firstItem="Mvd-YG-mPK" firstAttribute="leading" secondItem="JBu-iO-SIf" secondAttribute="trailing" constant="10" id="gjC-dQ-6de"/>
+                    <constraint firstItem="6fc-ii-14b" firstAttribute="centerY" secondItem="JBu-iO-SIf" secondAttribute="centerY" id="zL5-RM-DTI"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
+                <outlet property="detailView" destination="6fc-ii-14b" id="TZf-Ps-X7j"/>
                 <outlet property="iconView" destination="JBu-iO-SIf" id="DHA-B0-FMv"/>
                 <outlet property="titleView" destination="Mvd-YG-mPK" id="ASp-SE-5Fq"/>
             </connections>
+            <point key="canvasLocation" x="33.5" y="99"/>
         </tableViewCell>
     </objects>
     <resources>
