--- a/Star/Main/ViewController/Task/Task.storyboard
+++ b/Star/Main/ViewController/Task/Task.storyboard
@@ -125,7 +125,7 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="KBz-pJ-QCH">
                                 <rect key="frame" x="0.0" y="88" width="375" height="300"/>
                                 <subviews>
-                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="123456" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="XrW-DF-h1S">
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="验证码" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="XrW-DF-h1S">
                                         <rect key="frame" x="137.66666666666666" y="96" width="100" height="36"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="100" id="uBe-Sm-z5B"/>
